Some helpful message for your future self

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Topics</h1>
+<h1>SAY WHAT YOU WANT TO SAY!</h1>
 
 <table>
   <thead>
@@ -14,11 +14,12 @@
   <tbody>
     <% @topics.each do |topic| %>
       <tr>
+      
         <td><%= topic.title %></td>
-        <td><%= topic.description %></td>
-        <td><%= link_to 'Show', topic %></td>
-        <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
-        <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= topic.description %></td>
+        
+      <td><%= link_to 'Modify the message', edit_topic_path(topic) %></td>
+        <td><%= link_to 'Delete the message', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +27,4 @@
 
 <br>
 
-<%= link_to 'New Topic', new_topic_path %>
+<%= link_to 'New Message', new_topic_path %>
